--- a/full-stack.html
+++ b/full-stack.html
@@ -39,7 +39,7 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='https://jobs.smartrecruiters.com/Bey/743999692432163-full-stack-software-engineer'>Bey Full Stack Software Engineer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/vonage/jobs/4258912002'>Job Application for Software Engineer III - Full Stack Developer at Vonage</a></h5> 
@@ -94,7 +94,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://learnosity.workable.com/j/8410867F91'>Learnosity - Jobs: Full Stack Engineer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://learnosity.workable.com/j/8410867F91'>Learnosity - Jobs: Full Stack Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">Sydney</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -102,7 +102,7 @@
 <p><span class="badge badge-light">Boston, MA</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Bey/743999692421871-full-stack-software-engineer'>Bey Full Stack Software Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Bey/743999692421871-full-stack-software-engineer'>Bey Full Stack Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -118,7 +118,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/payfit/f3677c1c-2cff-4401-833e-8c7bf60de829'>PayFit - Senior Full-Stack Engineer - Growth</a></h5> 
+<h5><a href='https://jobs.lever.co/payfit/f3677c1c-2cff-4401-833e-8c7bf60de829'>PayFit - Senior Full-Stack Engineer - Growth</a></h5> 
 <p><span class="badge badge-light">Paris</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -132,7 +132,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/liveramp/jobs/1788038'>Job Application for Senior Software Engineer, Full Stack (DM) at LiveRamp</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/liveramp/jobs/1788038'>Job Application for Senior Software Engineer, Full Stack (DM) at LiveRamp</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -229,7 +229,7 @@ Idea People.</p>
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://hfarm.applytojob.com/apply/sMATwC5scH/Junior-FullStack-Developer'>Junior Full-Stack Developer - H-FARM S.p.A - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://hfarm.applytojob.com/apply/sMATwC5scH/Junior-FullStack-Developer'>Junior Full-Stack Developer - H-FARM S.p.A - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -249,7 +249,7 @@ Idea People.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://fractalanalytics.applytojob.com/apply/bs79JV7FwI/Senior-Engineer-Full-Stack'>Senior Engineer, Full Stack - Fractal Analytics - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://fractalanalytics.applytojob.com/apply/bs79JV7FwI/Senior-Engineer-Full-Stack'>Senior Engineer, Full Stack - Fractal Analytics - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -257,7 +257,7 @@ Idea People.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/iSpaceInc/743999692410317-full-stack-developer'>iSpace, Inc. Full Stack Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/iSpaceInc/743999692410317-full-stack-developer'>iSpace, Inc. Full Stack Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -330,7 +330,7 @@ intelligence?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Hifield/743999692260874-developpeur-fullstack-php-h-f'>Hifield D?veloppeur FullStack PHP H/F | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Hifield/743999692260874-developpeur-fullstack-php-h-f'>Hifield D?veloppeur FullStack PHP H/F | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -359,7 +359,7 @@ Berlin (published: 19.06.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://careers.peopleclick.com/careerscp/client_arm/external/en_US/jobDetails.do?functionName=getJobDetail&jobPostId=42751&localeCode=en-us'>Full Stack Web Developer - San Jose CA 95134 - ARM</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.peopleclick.com/careerscp/client_arm/external/en_US/jobDetails.do?functionName=getJobDetail&jobPostId=42751&localeCode=en-us'>Full Stack Web Developer - San Jose CA 95134 - ARM</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 11, 2019 ... Full Stack Web Developer. Job ID #: 15683; Job Category: Applications 
 Engineering; Employment Type: Experienced Professionals; Division: Pelion 
@@ -430,7 +430,7 @@ generation web and mobile components and interfaces. Design and build a?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/communitybrands/job/onpBafwh'>Community Brands Careers - Full Stack Software Developer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/communitybrands/job/onpBafwh'>Community Brands Careers - Full Stack Software Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
